fourth-module/12-kubernetes-04-net-2/src/1-1-multi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-1-front
  labels:
    app: task-1
    component: front
spec:
  replicas: 3
  selector:
    matchLabels:
      component: front
  template:
    metadata:
      labels:
        component: front
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
          name: http-port
        resources:
          requests:
            cpu: "1m"
            memory: "20Mi"
          limits:
            cpu: "10m"
            memory: "20Mi"
---
apiVersion: v1 
kind: Service
metadata:
  name: front-svc
spec:
  ports:
  - name: http-nginx
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    component: front
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-1-back
  labels:
    app: task-1
    component: back
spec:
  replicas: 2
  selector:
    matchLabels:
      component: back
  template:
    metadata:
      labels:
        component: back
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool:latest
        ports:
        - containerPort: 8080
          name: http-port
        resources:
          requests:
            cpu: "1m"
            memory: "20Mi"
          limits:
            cpu: "10m"
            memory: "20Mi"
---
apiVersion: v1 
kind: Service
metadata:
  name: back-svc
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    component: back
