fourth-module/12-kubernetes-04-net-2/src/2-1-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-2-ingress
  annotations:    
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-svc
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: back-svc
            port:
              number: 8080
